fixed overlapping boxes bug

--- a/prosjekt2/src/Test.css
+++ b/prosjekt2/src/Test.css
@@ -104,7 +104,7 @@ button:hover {
   }
   .category-container {
     margin-top: 15vw;
-    margin-left: 1em;
+    margin-left: 4vw;
     width: 20vw;
   }
   .categories {
